--- a/style.css
+++ b/style.css
@@ -31,6 +31,16 @@ h1 {
   border-radius: 10px;
   box-shadow: 2px 4px 5px rgba(0, 0, 0, 0.3);
 
+  transform: translateX(400%);
+  transition: all 0.5s ease;
+}
+
+.box:nth-of-type(even) {
+  transform: translateX(-400%);
+}
+
+.box.show {
+  transform: translateX(0);
 }
 
 .box h2 {
